--- a/React/package.json
+++ b/React/package.json
@@ -21,7 +21,9 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "history": "^5.0.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^6.0.0-beta.0"
   }
 }
